[workspace]
default-members = [
    "fyber"
]

exclude = [ ]

members = [
    "fyber",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
lazy_static = "1"
paste = "1"
smart_default = "0.7"
thiserror = "1"

[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com>",]
categories = [ ]
description = "fyber focuses on facilitating communications between various wasm instances"
edition = "2021"
homepage = "https://github.com/FL03/fyber/wiki"
keywords = [ ]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FL03/fyber.git"
version = "0.0.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
