[workspace]
default-members = [
    "fyber"
]

exclude = [ ]

members = [ 
    "fyber",
    "core",
]

resolver = "2"

[workspace.dependencies]
fyber-core = { default-features = false, path = "./core", version = "0.0.1" }

anyhow = "1"
lazy_static = "1"
paste = "1"
serde = { default-features = false, features = ["derive"], version = "1" }
serde_derive = "1"
serde_json = "1"
smart-default = "0.7"
strum = { default-features = false, features = ["derive"], version = "0.26" }
thiserror = "2"

[workspace.package]
authors = ["FL03 <j3mccain@gmail.com> (https://github.com/FL03)", "Scattered-Systems <support@scsys.io> (https://scsys.io)"]
categories = [ "wasm" ]
description = "fyber focuses on facilitating communications between various wasm instances"
edition = "2021"
homepage = "https://github.com/FL03/fyber/wiki"
keywords = ["agent", "orchestrator", "state"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FL03/fyber.git"
version = "0.0.1"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
