[package]
build = "build.rs"
name = "fyber-actors"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
bench = true
crate-type = [ "cdylib", "rlib" ]
doctest = true
test = true

[features]
default = [
  "std",
]

full = [
  "default",
  "serde",
]

# ********* [FF] Dependencies *********
alloc = [
  "fyber-core/alloc",
  "serde?/alloc",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "fyber-core/serde",
]

# ********* [FF] Environments *********
std = [
  "alloc",
  "fyber-core/std",
  "serde?/std",
]

[dependencies]
fyber-core = { default-features = false, workspace = true }

serde = { default-features = false, optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
wasmtime = { default-features = false, features = ["component-model", "runtime"], version = "29"}
