[package]
build = "build.rs"
name = "fyber-core"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
bench = true
crate-type = [ "cdylib", "rlib" ]
doctest = true
test = true

[features]
default = [
  "std",
]

full = [
  "default",
  "serde",
]

# ********* [FF] Dependencies *********
alloc = [
  "serde?/alloc",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
]

# ********* [FF] Environments *********
std = [
  "alloc",
  "serde?/std",
  "thiserror/std",
]

[dependencies]
serde = { default-features = false, optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
thiserror = { default-features = true, workspace = true }