[package]
build = "build.rs"
name = "fyber"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std",
]

full = [
    "default",
    "agents",
    "serde",
]

agents = [
    "dep:fyber-agents",
]
# ********* [FF] Dependencies *********
alloc = [
    "fyber-core/alloc",
    "fyber-agents?/alloc",
]

serde = [
    "fyber-agents?/serde",
    "fyber-core/serde"
]

tracing = [
    "fyber-agents?/tracing",
    "fyber-core/tracing",
]

# ********* [FF] Environments *********
std = [
    "alloc",
    "fyber-core/std",
    "fyber-agents?/std",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]
fyber-agents = { default-features = false, optional = true, path = "../agents", version = "0.0.1" }
fyber-core = { default-features = false, path = "../core", version = "0.0.1" }


[dev-dependencies]
lazy_static.workspace = true
petgraph = { workspace = true }
rand = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown.dependencies]

[target.wasm32-wasi]
